--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.1",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0"
   },
