--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
@@ -13,5 +14,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"] // файлы, которые нужно игнорировать
 }
