--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kode-intership-2025-react",
+  "homepage": "https://vincentochangretta.github.io/kodeOnline/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
